--- a/main.html
+++ b/main.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="main-container">
+		<div id="testimonial">
+		<p id="main" class="text">This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
+		<p id="name" class="author">-John Doe</p>
+	</div>
+		<div id="testimonial">
+			<p id="main" class="text">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
+		<p id="name" class="author">-Jane Smith</p>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
