--- a/main.html
+++ b/main.html
@@ -7,12 +7,13 @@
 </head>
 
 <body>
-	<div class="main-container">
-		<div id="testimonial">
+	<div class="main-container"> <h1> Testimonials </h1>
+		<div class="testimonial">
 		<p id="main" class="text">This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
 		<p id="name" class="author">-John Doe</p>
 	</div>
-		<div id="testimonial">
+		
+		<div class="testimonial">
 			<p id="main" class="text">I have been using this for a few weeks now and it has completely transformed my workflow.</p>
 		<p id="name" class="author">-Jane Smith</p>
 		</div>
